# ies-tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  NOTICE  README.md  dev_setup.sh  extension.ttl  person.ttl  pyproject.toml  run_test.sh  sample_participant.ttl  test_extensions.sh  test_vr.sh
.github/workflows/: create-release-pr.yml  jira-sync.yml  publish.yml  python-test-build.yaml
ies_tool/: __init__.py  constants.py  entity_factory.py  ies4-3.ttl  ies4.ttl  iesExtensions.ttl  ies_classes.py  ies_constants.py  ies_ontology.py  ies_plugin.py  ies_tool.py  rdflib_plugin.py  sparql_endpoint_plugin.py  type_aliases.py  utils.py
test/: extensions.py  my_test.py  output.ttl  person.py  person.ttl  person3.ttl  test.py  test_country.py  test_currency.py  test_dates.ttl  test_default_data_namespace.py  test_prefixes.py  test_representation_data_type.py  test_time.py  test_validate_referenced.py
